--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -64,9 +64,11 @@ jobs:
            debug: true
            timeout: 300s
            script: |
+            pgrep -a java > java_processes.txt
+            cat java_processes.txt
+
             pids=$(pgrep -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar")
             echo "PID 목록: $pids"
-            pgrep -a java
 
             if [ -n "$pids" ]; then
               for pid in $pids; do
